# examples

./: .gitignore  .rag.yaml  notes-build13-qrcode.sh  requirements.txt
.vim/: coc-settings.json
5090/try-exllamav2/: notes.fish  pyproject.toml
5090/try-vllm/: benchmarks.fish  check-model-config.py  completions.py  graph-hf-model.py  graph-hf-qwen.py  graph-test-simple.py  notes-qwen2.5-VL-multi-modal.fish  notes-vllm-on-5090.fish  pyproject.toml  todo-apc-auto-prefix-caching.fish  todo-notes-using-vllm-in-python-script.fish  todo-qwen-qwq-reasoning.fish  todo-qwen2.5-M-million-context.fish  todo-spec-dec-zed-zeta-ngram.fish  todo-spec-dec.py  video-demos.fish
5090/try-zeta/: .gitignore  README.md  server.py  setup.fish  sft.py  vllm-prompt-test.fish
builds/cmake/: CMakeLists.txt
containers/ns/: Dockerfile  compose.yaml  fork.cpp
gguf/: README.md
gguf/qwen3.5-base/: convert.bash
java/inspect-screenpal/: extract-key-jars.fish  modify-jar.fish  notes.fish  swingexplorer-JTOPTIONS.fish  swingexplorer-inline.fish  swingexplorer.fish  test-after-discovered-app-logs-andv2.9.2.fish  test.fish
java/uidump/: AttachAndLoad.java  HelloAgent.java  Makefile  README.md  UiDumpAgent.java  UiDumpAgent2.java  build-agent2.sh  build-hello.sh  manifest.mf  mf.mf  mf2.mf  steps.sh
languages/cobol/: Makefile  today.cob
lms/autogen/: demo.py  find-the-file.py  guess-number.py  (+1 more)
models/: test.cs
models/gemma4/: __main__.py  audio.py  example2.py  pyproject.toml  video-edit-prompt
models/qwen3.5/: inspect_model.py  pyproject.toml  venv-fix-for-torch-and-flash-attn.fish
models/qwen3.5/qwen3omni/: captioner_demo.py  detect_breathing.py  list_cuda_devices.py
models/qwen3omni/: captioner_demo.py  detect_breathing.py  list_cuda_devices.py  pyproject.toml  venv_linux.fish  working-deps
models/qwen3omni/clips/editing_samples/sample1/: README.md
nvidia/: kernel.cu  pyproject.toml
rocm/ggml-exercise/sizes/: .clang-format  .gitignore  CMakeLists.txt  sizes.cpp  unions.cpp
semantic/: Program.cs  semantic.csproj
try-vllm/: notes.fish  pyproject.toml
vms/: dotfiles-notes.sh
(+308 files in other folders)
