[project]
name = "gemma4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "ipykernel>=7.2.0",
    "librosa>=0.11.0",
    "torch>=2.11.0",
    "torchcodec>=0.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
    "yapf>=0.43.0",
]
