[project]
name = "qwen3-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "ipykernel>=7.2.0",
    "qwen-omni-utils>=0.0.9",
    "rich>=14.3.3",
    "torch==2.9.0",
    "torchvision==0.24",
    "transformers>=5.3.0",
    "yapf>=0.43.0",
]
