[project]
name = "qwen3omni"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "flash-attn>=2.8.3",
    "ipykernel>=7.2.0",
    "qwen-omni-utils>=0.0.9",
    "torchvision>=0.26.0",
    "transformers",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }
