[project]
name = "qwen3omni"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "ipykernel>=7.2.0",
    "qwen-omni-utils>=0.0.9",
    "torch==2.8.0",
    "torchvision==0.23",
    "transformers",
    "yapf>=0.43.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }
